--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body class="bg-gray-900 min-h-screen flex items-center justify-center">
   <main class="grid grid-rows-2 grid-cols-1 md:grid-rows-1 md:grid-cols-2 
-   m-7 max-w-screen-lg bg-gray-800 overflow-hidden rounded-md">
-    <section id="texts" class="max-w-full order-last md:order-1">
+   m-7 w-md bg-gray-800 overflow-hidden rounded-md md:h-[380px]">
+    <section id="texts" class="max-w-full order-last md:order-first w-md">
       <div class="textbody flex flex-col gap-8 p-16 max-w-lg max-h-lg">
         <h1 class="text-2xl font-bold text-white text-center md:text-left">
           Get <span class="text-indigo-500">insights</span> that help your business grow.
@@ -37,10 +37,10 @@
         </div>
       </div>
     </section>
-    <section class="max-w-full  relative max-w-lg max-h-full">
+    <section class=" relative ">
       <img src="images/image-header-desktop.jpg" alt="header" class="absolute inset-0 hidden md:block object-fit h-full w-full">
       <img src="images/image-header-mobile.jpg" alt="header" class="absolute inset-0 block md:hidden object-fit h-full w-full">
-      <div class="overlay absolute inset-0 w-full h-full bg-indigo-700 opacity-60"></div>
+      <div class="overlay absolute inset-0 w-full h-full bg-indigo-800 opacity-75"></div>
     </section>
   </main>
 </body>
